infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
# number of pods to be created to run specified image
  replicas: 1
  # selector is used to find the pod that will be created
  selector:
  # find all pods with label app: comments >> note app can be any name like saad : comments
    matchLabels:
      app: comments
  # template is the pod definition
  template:
  # metadata is data about the pod
    metadata:
    # labels is the label of the pod
      labels:
        app: comments
    spec:
    # containers is the list of containers that will be created inside the pod
      containers:
        - name: comments
          image: mostafasaad/comments

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  # type: NodePort
  # type: LoadBalancer
  ports:
    - name: comments
      protocol: TCP
      # node port is the port that will be exposed to the outside world
      port: 4001
      # target port is the port that the pod is listening to
      targetPort: 4001
  # selector is the label of the pod
  selector:
    app: comments
